--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 </head>
 <body style="margin: 0; height: 100%; background-color: #313945;">
     <div id="app-container"></div>
-</body>
+<script type="text/javascript" src="./dist/index.js"></script></body>
 </html>
