--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Retrowave Radio</title>
 </head>
-<body style="margin: 0; height: 100%; background-color: #313945;">
+<body>
     <div id="app-container"></div>
 <script type="text/javascript" src="./dist/index.js"></script></body>
 </html>
